--- a/06-MY451_6.rmd
+++ b/06-MY451_6.rmd
@@ -10,23 +10,23 @@ These may appear in two distinct roles:
 -   As population distributions of continuous variables, for instance
     blood pressure in the illustrative example of this chapter. This
     contrasts with the kinds of discrete variables that were considered
-    in Chapters \@ref(c_tables) and \@ref(c_probs). Methods of inference
+    in Chapters \@ref(c_tables) and \@ref(c-probs). Methods of inference
     for continuous variables will be introduced in Chapters
-    \@ref(c_means) and \@ref(c_regression).
+    \@ref(c_means) and \@ref(c-regression).
 
 -   As sampling distributions of sample statistics. These are typically
     continuous even in analyses of discrete variables, such as in
-    Chapter \@ref(c_probs) where the variable of interest $Y$ was binary
+    Chapter \@ref(c-probs) where the variable of interest $Y$ was binary
     but the sampling distributions of a sample proportion $\hat{\pi}$
     and the $z$-test statistic for population probability $\pi$ were
     nevertheless continuous. We have already encountered two continuous
     distributions in this role, the $\chi^{2}$ distributions in Chapter
-    \@ref(c_tables) and the standard normal distribution in Chapter
-    \@ref(c_probs). Their origins are explained in more detail below.
+    \@ref(c-tables) and the standard normal distribution in Chapter
+    \@ref(c-probs). Their origins are explained in more detail below.
 
 \label{p_bpressure_ex} To illustrate the concepts, we use data from the
 Health Survey for England 2002 (HES).[^1] One part of the survey was a
-short physical examination by a nurse. Figure \@ref(f_bp1) shows a
+short physical examination by a nurse. Figure \@ref(f-bp1) shows a
 histogram and frequency polygon of diastolic blood pressure (in mm Hg)
 for 4489 respondents, measured by the mean of the last two of three
 measurements taken during the examination. Data from respondents for
@@ -40,11 +40,11 @@ frequency polygon, from Health Survey for England 2002 (respondents aged
 data-label="f_bp1"></span>](bloodp1){width="13.5cm"}
 
 The respondents whose blood pressures are summarized in Figure
-\@ref(f_bp1) are in reality a sample from a larger population in the
-sense of Sections \@ref(s_samples_finpops) and \@ref(s_samples_samples).
+\@ref(f-bp1) are in reality a sample from a larger population in the
+sense of Sections \@ref(s_samples_finpops) and \@ref(s_samples-samples).
 However, for illustrative purposes we will here pretend that they are
 actually an entire finite population of 4489 people (the adults in a
-small town, say). The values summarised in Figure \@ref(f_bp1) then form
+small town, say). The values summarised in Figure \@ref(f-bp1) then form
 the population distribution of blood pressure in this population. It is
 clear that blood pressure is best treated as a continuous variable.
 
@@ -53,10 +53,10 @@ clear that blood pressure is best treated as a continuous variable.
 ### Population parameters and their point estimates {#ss_contd_popdistrs_params}
 
 If we knew all of its values, we could summarise a finite population
-distribution by, say, a histogram like Figure \@ref(f_bp1). We can also
+distribution by, say, a histogram like Figure \@ref(f-bp1). We can also
 consider specific characteristics of the distribution, i.e. its
 *parameters* in the sense introduced in Section
-\@ref(s_probs_distribution). For the distribution of a continuous
+\@ref(s_probs-distribution). For the distribution of a continuous
 variable, the most important parameters are the **population mean**
 $$\mu=\frac{\sum Y_{i}}{N}
 \label{mu}$$ and the **population variance**
@@ -66,19 +66,19 @@ deviation** $$\sigma = \sqrt{\frac{\sum (Y_{i}-\mu)^{2}}{N}}.
 \label{sigma}$$ Here $\mu$ and $\sigma$ are the lower-case Greek letters
 “mu” and “sigma” respectively, and $\sigma^{2}$ is read “sigma squared”.
 It is common to use Greek letters for population parameters, as we did
-also for the probability parameter $\pi$ in Chapter \@ref(c_probs).
+also for the probability parameter $\pi$ in Chapter \@ref(c-probs).
 
 In (\@ref(mu})–(\ref{sigma)), $N$ is the number of units in a finite
 population and the sums indicated by $\Sigma$ are over all of these $N$
-units. If we treat the data in Figure \@ref(f_bp1) as a population,
+units. If we treat the data in Figure \@ref(f-bp1) as a population,
 $N=4489$ and these population parameters are $\mu=74.2$,
 $\sigma^{2}=127.87$ and $\sigma=11.3$.
 
 Because the formulas (\@ref(mu})–(\ref{sigma)) involve the population
 size $N$, they apply in this exact form only to finite populations like
 the one in this example (and as discussed more generally in Section
-\@ref(s_samples_finpops)) but not to infinite ones of the kind discussed
-in Section \@ref(s_samples_infpops). However, the definitions of $\mu$,
+\@ref(s_samples-finpops)) but not to infinite ones of the kind discussed
+in Section \@ref(s_samples-infpops). However, the definitions of $\mu$,
 $\sigma^{2}$, $\sigma$ and other parameters can be extended to apply
 also to infinite populations. These definitions, which will be omitted
 here, involve the concept of continuous probability distributions that
@@ -88,7 +88,7 @@ infinite-population cases, and the same methods of analysis apply to
 both, so we can here ignore the distinction without further comment.
 
 The population formulas (\@ref(mu})–(\ref{sigma)) clearly resemble those
-of some sample statistics introduced in Chapter \@ref(c_descr1),
+of some sample statistics introduced in Chapter \@ref(c-descr1),
 specifically the *sample* mean, variance and standard deviation
 $$\begin{aligned}
 \bar{Y}&=&\frac{\sum Y_{i}}{n}, \label{Ybar_ch6} \\
@@ -97,9 +97,9 @@ s^{2} &=& \frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1} \text{and}
 s &=& \sqrt{\frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1}}
 \label{s_ch6}\end{aligned}$$ where the sums are now over the $n$
 observations in a sample. These can be used as descriptions of the
-sample distribution as discussed in Chapter \@ref(c_descr1), but also as
+sample distribution as discussed in Chapter \@ref(c-descr1), but also as
 *point estimates* of the corresponding population parameters in the
-sense defined in Section \@ref(s_probs_pointest). We may thus use the
+sense defined in Section \@ref(s_probs-pointest). We may thus use the
 sample mean $\bar{Y}$ as a point estimate of the population mean $\mu$,
 and the sample variance $s^{2}$ and sample standard deviation $s$ as
 point estimates of population variance $\sigma^{2}$ and standard
@@ -109,8 +109,8 @@ both finite and infinite population distributions.
 For further illustration of the connection between population and sample
 quantities, we have also drawn a simple random sample of $n=50$
 observations from the finite population of $N=4489$ observations in
-Figure \@ref(f_bp1). Table \@ref(t_bp_example) shows the summary
-statistics (\@ref(Ybar_ch6))–(\@ref(s_ch6)) in this sample and the
+Figure \@ref(f_bp1). Table \@ref(t_bp-example) shows the summary
+statistics (\@ref(Ybar_ch6))–(\@ref(s-ch6)) in this sample and the
 corresponding parameters (\@ref(mu))–(\@ref(sigma)) in the population.
 
   ------------ ---------- ---------------- --------------- ---------------------
@@ -122,11 +122,11 @@ corresponding parameters (\@ref(mu))–(\@ref(sigma)) in the population.
 
   : Summary statistics for diastolic blood pressure in the population
   and a sample from it in the example used for illustration in Sections
-  \@ref(s_contd_popdistrs)–\@ref(s_contd_clt).<span
+  \@ref(s_contd_popdistrs)–\@ref(s_contd-clt).<span
   data-label="t_bp_example"></span>
 
 You may have noticed that the formulas of the sample variance
-(\@ref(s2_ch6)) and sample standard deviation (\@ref(s_ch6)) involve the
+(\@ref(s2_ch6)) and sample standard deviation (\@ref(s-ch6)) involve the
 divisor $n-1$ rather than the $n$ which might seem more natural, while
 the population formulas (\@ref(sigma2}) and (\ref{sigma)) do use $N$
 rather than $N-1$. The reason for this is that using $n-1$ gives the
@@ -146,11 +146,11 @@ could be used as estimates for the same population parameter.
 ### General comments {#ss_contd_probdistrs_general}
 
 Thinking about population distributions of continuous distributions
-using, say, histograms as in Figure \@ref(f_bp1) would present
+using, say, histograms as in Figure \@ref(f-bp1) would present
 difficulties for statistical inference, for at least two reasons. First,
 samples cannot in practice give us enough information to make reliable
 inferences on all the details of a population distribution, such as the
-small kinks and bumps of Figure \@ref(f_bp1). Such details would
+small kinks and bumps of Figure \@ref(f-bp1). Such details would
 typically not even be particularly interesting compared to major
 features like the central tendency and variation of the population
 distribution. Second, this way of thinking about the population
@@ -163,8 +163,8 @@ well-represented by a continuous *probability distribution*, and focus
 on inference on the parameters of that distribution.
 
 We have already introduced the concept of probability distributions in
-Section \@ref(s_samples_popdistrs), and considered instances of it in
-Chapters \@ref(c_tables} and \ref{c_probs). There, however, the term was
+Section \@ref(s_samples-popdistrs), and considered instances of it in
+Chapters \@ref(c_tables} and \ref{c-probs). There, however, the term was
 not emphasised because it added no crucial insight into the methods of
 inference. This was because for discrete variables a probability
 distribution is specified simply by listing the probabilities of all the
@@ -173,17 +173,17 @@ distributions and their parameters seems almost redundant in that
 context.
 
 The situation is very different for continuous variables. This is
-illustrated by Figure \@ref(f_bp2), which shows the same frequency
-polygon as in Figure \@ref(f_bp1), now supplemented by a smooth curve.
+illustrated by Figure \@ref(f-bp2), which shows the same frequency
+polygon as in Figure \@ref(f-bp1), now supplemented by a smooth curve.
 This curve (“a probability density function”) describes a particular
 probability distribution. It can be thought of as a smoothed version of
 the shape of the frequency polygon. What we will do in the future is to
 use some such probability distribution to represent the population
 distribution. This means effectively arguing that we believe that the
 shape of the true population distribution is sufficiently regular to be
-well described by a smooth curve such as the one in Figure \@ref(f_bp2).
+well described by a smooth curve such as the one in Figure \@ref(f-bp2).
 
-In Figure \@ref(f_bp2) the curve and the frequency polygon have
+In Figure \@ref(f-bp2) the curve and the frequency polygon have
 reasonably similar shapes, so the assumption that the former is a good
 representation of the latter does not seem far-fetched. However, the two
 are clearly not exactly the same, \label{p_model2} nor do we expect that
@@ -193,7 +193,7 @@ population distribution is close enough to a specified probability
 distribution for the results from analyses based on this assumption to
 be meaningful and not misleading.
 
-![The frequency polygon of Figure \@ref(f_bp1), together with a normal
+![The frequency polygon of Figure \@ref(f-bp1), together with a normal
 curve with the same mean and variance.<span
 data-label="f_bp2"></span>](bloodp2){width="11.5cm"}
 
@@ -201,7 +201,7 @@ data-label="f_bp2"></span>](bloodp2){width="11.5cm"}
 distribution is known as a **statistical model** for the population. The
 reason for working with a model is that it leads to much simpler methods
 of analysis than would otherwise be required. For example, the shape of
-the distribution shown in Figure \@ref(f_bp2) is entirely determined by
+the distribution shown in Figure \@ref(f-bp2) is entirely determined by
 just two parameters, its mean and variance. Under this model, all
 questions about the population distribution can thus be reduced to
 questions about these two population parameters, and inference can focus
@@ -216,7 +216,7 @@ chosen carefully, usually based on both substantive considerations and
 initial descriptive examination of the observed data.
 
 For example, the particular probability distribution shown in Figure
-\@ref(f_bp2), which is known as the normal distribution, is by definition
+\@ref(f-bp2), which is known as the normal distribution, is by definition
 symmetric around its mean. While it is an adequate approximation of many
 approximately symmetric population distributions of continuous
 variables, such as that of blood pressure, many other population
@@ -226,16 +226,16 @@ Instead, we might consider other continuous probability distributions
 which can be skewed. Examples of these are the *Exponential*, *Gamma*,
 *Weibull*, and *Beta* distributions. *Discrete* distributions, of
 course, will require quite different probability disributions, such as
-the *Binomial* distribution discussed in Chapter \@ref(c_probs), or the
+the *Binomial* distribution discussed in Chapter \@ref(c-probs), or the
 *Multinomial* and *Poisson* distributions. On this course, however, we
 will not include further discussion of these various possibilities.
 
 ### The normal distribution as a population distribution {#ss_contd_probdistrs_normal}
 
 The particular probability distribution that is included in Figure
-\@ref(f_bp2) is a **normal distribution**, also known as the *Gaussian*
+\@ref(f-bp2) is a **normal distribution**, also known as the *Gaussian*
 distribution, after the great German mathematician Karl Friedrich Gauss
-who was one of the first to derive it in 1809. Figure \@ref(f_10dm) shows
+who was one of the first to derive it in 1809. Figure \@ref(f-10dm) shows
 a portrait of Gauss from the former German 10-DM banknote, together with
 pictures of the university town of Göttingen and of the normal curve
 (even the mathematical formula of the curve is engraved on the note).
@@ -248,7 +248,7 @@ banknote.<span data-label="f_10dm"></span>](mark){width="14cm"}
 The normal distribution is by far the most important probability
 distribution in statistics. The main reason for this is its use as a
 sampling distribution in a wide range of contexts, for reasons that are
-explained in Section \@ref(s_contd_clt). However, the normal distribution
+explained in Section \@ref(s_contd-clt). However, the normal distribution
 is also useful for describing many approximately symmetric population
 distributions, and it is in this context that we introduce its
 properties first.
@@ -258,21 +258,21 @@ A normal distribution is completely specified by two numbers, its mean
 expressed in notation as $Y\sim N(\mu, \sigma^{2})$, which is read as
 “$Y$ is normally distributed with mean $\mu$ and variance $\sigma^{2}$”.
 Different values for $\mu$ and $\sigma^{2}$ give different
-distributions. For example, the curve in Figure \@ref(f_bp2) is that of
+distributions. For example, the curve in Figure \@ref(f-bp2) is that of
 the $N(74.2, \, 127.87)$ distribution, where the mean $\mu=74.2$ and
 variance $\sigma^{2}=127.87$ are the same as the mean and variance
 calculated from formulas (\@ref(mu)) and (\@ref(sigma2)) for the 4489
 observations of blood pressure. This ensures that this particular normal
-curve best matches the frequency polygon in Figure \@ref(f_bp2).
+curve best matches the frequency polygon in Figure \@ref(f-bp2).
 
 The mean $\mu$ describes the central tendency of the distribution, and
 the variance $\sigma^{2}$ its variability. This is illustrated by Figure
-\@ref(f_3norms), which shows the curves for three different normal
+\@ref(f-3norms), which shows the curves for three different normal
 distributions. The mean of a normal distribution is also equal to both
 its median and its mode. Thus $\mu$ is the central value in the sense
 that it divides the distribution into two equal halves, and it also
 indicates the peak of the curve (the highest probability, as discussed
-below). In Figure \@ref(f_3norms), the curves for $N(0, 1)$ and $N(0, 9)$
+below). In Figure \@ref(f-3norms), the curves for $N(0, 1)$ and $N(0, 9)$
 are both centered around $\mu=0$; the mean of the $N(5, 1)$ distribution
 is $\mu=5$, so the whole curve is shifted to the right and centered
 around 5.
@@ -281,7 +281,7 @@ around 5.
 data-label="f_3norms"></span>](threenorms){width="11cm"}
 
 The variance $\sigma^{2}$ determines how widely spread the curve is. In
-Figure \@ref(f_3norms), the curves for $N(0, 1)$ and $N(5, 1)$ have the
+Figure \@ref(f-3norms), the curves for $N(0, 1)$ and $N(5, 1)$ have the
 same variance $\sigma^{2}=1$, so they have the same shape in terms of
 their spread. The curve for $N(0, 9)$, on the other hand, is more spread
 out, because it has a higher variance of $\sigma^{2}=9$. As before, it
@@ -291,7 +291,7 @@ Thus we may also say that the $N(0, 9)$ distribution has the standard
 deviation $\sigma=\sqrt{9}=3$ (for $\sigma^{2}=1$ the two numbers are
 the same, since $\sqrt{1}=1$).
 
-In the histogram in Figure \@ref(f_bp1), the heights of the bars
+In the histogram in Figure \@ref(f-bp1), the heights of the bars
 correspond to the proportions of different ranges of blood pressure
 among the 4489 people in the data set. Another way of stating this is
 that if we were to sample a person from this group at random, the
@@ -312,8 +312,8 @@ sampled unit must have *some* value of the variable in question. More
 generally, the area under the curve for a range of values gives the
 probability that the value of a randomly sampled observation is in that
 range. These are the same principles that we have already used to derive
-$P$-values for tests in Sections \@ref(ss_tables_chi2test_Pval) and
-\@ref(ss_probs_test1sample_samplingd).
+$P$-values for tests in Sections \@ref(ss_tables_chi2test-Pval) and
+\@ref(ss_probs_test1sample-samplingd).
 
 ![Illustration of probabilities for the normal distribution. The
 probability of an observation being within one standard deviation of the
@@ -321,7 +321,7 @@ mean (the grey area) is 0.68, and the probability of it being within
 1.96 standard deviations of the mean (grey and shaded areas together) is
 0.95.<span data-label="f_norm1"></span>](norm1){width="12cm"}
 
-Figure \@ref(f_norm1) illustrates this further with some results which
+Figure \@ref(f-norm1) illustrates this further with some results which
 hold for any normal distribution, whatever its mean and variance. The
 grey area in the figure corresponds to values from $\mu-\sigma$ to
 $\mu+\sigma$, i.e. those values which are no further than one standard
@@ -335,7 +335,7 @@ thus say that approximately 95% of observations drawn from a normal
 distribution tend to be within two standard deviations of the mean. This
 leaves the remaining 5% in the two tails of the distribution, further
 than 1.96 standard deviations from the mean (the two white areas in
-Figure \@ref(f_norm1)). Because the normal distribution is symmetric,
+Figure \@ref(f-norm1)). Because the normal distribution is symmetric,
 these two areas are of equal size and each thus has the probability
 0.025 (i.e. 0.05/2).
 
@@ -358,7 +358,7 @@ confident (perhaps from surveys like the one described above) that the
 distribution of diastolic blood pressure in the population of interest
 was approximately normally distributed with mean 74.2 and variance
 127.87 (and thus standard deviation 11.3). The probabilities of interest
-are then the areas of the regions shown in Figure \@ref(f_normbp).
+are then the areas of the regions shown in Figure \@ref(f-normbp).
 
 The remaining question is how to calculate such probabilities. The short
 answer is “with a computer”. However, to explain an approach which is
@@ -413,7 +413,7 @@ they remove the specific values of $\mu$ and $\sigma$ from the
 calculation. With this trick, probabilities for any normal distribution
 can be calculated using a single table for $Z$ scores. Such a table is
 given on page \pageref{s_disttables_Z} in the Appendix, and an extract
-from it is shown in Table \@ref(t_normtab) (note that it is not always
+from it is shown in Table \@ref(t-normtab) (note that it is not always
 presented exactly like this, as different books may use slightly
 different format or notation). The first column lists values of the $Z$
 score (a full table would typically give all values from 0.00 to about
@@ -422,15 +422,15 @@ that a $Z$ score for a normal distribution is *larger than* the value
 given by $z$, i.e. the area of the region to the right of $z$.
 
 Consider first the probability that blood pressure is greater than 90,
-i.e. the area labelled “High” in Figure \@ref(f_normbp). We have seen
+i.e. the area labelled “High” in Figure \@ref(f-normbp). We have seen
 that 90 corresponds to a $Z$ score of 1.40, so the probability of high
 blood pressure is the same as the probability that the normal $Z$ score
 is greater than 1.40. The row for $z=1.40$ in the table tells us that
 this probability is 0.0808, or 0.08 when rounded to two decimal places
-as in Figure \@ref(f_normbp).
+as in Figure \@ref(f-normbp).
 
 The second quantity of interest was the probability of a blood pressure
-at most 60, i.e. the area of the “Low” region in Figure \@ref(f_normbp).
+at most 60, i.e. the area of the “Low” region in Figure \@ref(f-normbp).
 The corresponding $Z$ score is $-1.26$. The table, however, shows only
 positive values of $z$. This is because we can use the symmetry of the
 normal distribution to reduce all such questions to ones about positive
@@ -441,7 +441,7 @@ least* 1.26 (the area of the right-hand tail to the right of 1.26). This
 is the kind of quantity we calculated above[^2]. The required
 probability is thus equal to the right-hand tail probability for 1.26,
 which the table shows to be 0.1038 (rounded to 0.10 in Figure
-\@ref(f_normbp)).
+\@ref(f-normbp)).
 
 Finally, the probability of the “Mid” range of blood pressure is the
 remaining probability not in the two other regions. Because the whole
@@ -463,7 +463,7 @@ and standard deviation *stddev* is **at most** *quant*.
 
 In practice we do not usually know the population mean and variance, so
 their sample estimates will be used in such calculations. For example,
-for the sample in Table \@ref(t_bp_example) we had $\bar{Y}=72.6$ and
+for the sample in Table \@ref(t_bp-example) we had $\bar{Y}=72.6$ and
 $s=12.7$. Using these values in a similar calculation as above gives the
 estimated proportion of people in the population with diastolic blood
 pressures over 90 as 8.5%. Even with a sample of only 50 observations,
@@ -473,7 +473,7 @@ about 8.1%.
 ## The normal distribution as a sampling distribution {#s_contd_clt}
 
 We have already encountered the normal distribution in Section
-\@ref(ss_probs_test1sample_samplingd), in the role of the *sampling
+\@ref(ss_probs_test1sample-samplingd), in the role of the *sampling
 distribution* of a test statistic rather than as a model for the
 population distribution of a variable. In fact, the most important use
 of the normal distribution is as a sampling distribution, because in
@@ -482,11 +482,11 @@ The reasons for this claim are explained in this section. We begin with
 the case of the distribution of the sample mean in samples from a normal
 population, before extending it with a result which provides the
 justification for the standard normal sampling distributions used for
-inference on proportions in Chapter \@ref(c_probs), and even for the
+inference on proportions in Chapter \@ref(c-probs), and even for the
 $\chi^{2}$ sampling distribution of the $\chi^{2}$ test in Chapter
-\@ref(c_tables).
+\@ref(c-tables).
 
-Recall from Section \@ref(ss_tables_chi2test_sdist) that the sampling
+Recall from Section \@ref(ss_tables_chi2test-sdist) that the sampling
 distribution of a statistic is its distribution across all possible
 random samples of a given size from a population. The statistic we focus
 on here is the sample mean $\bar{Y}$. If we assume that the population
@@ -519,7 +519,7 @@ separately:
     also depends on the sample size $n$, which appears in the
     denominator in $\sigma/\sqrt{n}$. This means that the standard error
     of the mean is smaller for large samples than for small ones. This
-    is illustrated in Figure \@ref(f_sampld2). It shows the sampling
+    is illustrated in Figure \@ref(f-sampld2). It shows the sampling
     distribution of $\bar{Y}$ for samples of sizes $n=50$ and $n=1000$
     from a normal population with $\mu=74.2$ and $\sigma=11.3$, i.e. the
     population mean and standard deviation in the blood pressure
@@ -529,7 +529,7 @@ separately:
     more precisely, the standard error of the mean is
     $\sigma/\sqrt{n}=11.3/\sqrt{50}=1.60$ when $n=50$ and
     $11.3/\sqrt{1000}=0.36$ when $n=1000$. Recalling from Section
-    \@ref(ss_contd_probdistrs_normal) that approximately 95% of the
+    \@ref(ss_contd_probdistrs-normal) that approximately 95% of the
     probability in a normal distribution is within two standard
     deviations of the mean, this means that about 95% of samples of size
     50 in this case would give a value of $\bar{Y}$ between
@@ -561,15 +561,15 @@ level of precision required, and guesses about the variability of
 variables in the population. Statistical considerations of the
 trade-offs between them in order to make decisions about sample sizes
 are known as *power* calculations. They will be discussed very briefly
-later, in Section \@ref(ss_means_tests3_power).
+later, in Section \@ref(ss_means_tests3-power).
 
-In Figure \@ref(f_sampld) we use a computer simulation rather than a
+In Figure \@ref(f-sampld) we use a computer simulation rather than a
 mathematical theorem to examine the sampling distribution of a sample
 mean. Here 100,000 simple random samples of size $n=50$ were drawn from
 the $N=4489$ values of blood pressure that we are treating as the finite
 population in this illustration. The sample mean $\bar{Y}$ of blood
 pressure was calculated for each of these samples, and the histogram of
-these 100,000 values of $\bar{Y}$ is shown in Figure \@ref(f_sampld).
+these 100,000 values of $\bar{Y}$ is shown in Figure \@ref(f-sampld).
 Also shown is the curve of the normal distribution with the mean $\mu$
 and standard deviation $\sigma/\sqrt{50}$ determined by the theoretical
 result given above.
@@ -577,21 +577,21 @@ result given above.
 ![Example of the sampling distribution of the sample mean. The plot
 shows a histogram of the values of the sample mean in 100,000 samples of
 size $n=50$ drawn from the 4489 values of diastolic blood pressure shown
-in Figure \@ref(f_bp1), for which the mean is $\mu=74.2$ and standard
+in Figure \@ref(f-bp1), for which the mean is $\mu=74.2$ and standard
 deviation is $\sigma=11.3$. Superimposed on the histogram is the curve
 of the approximate sampling distribution, which is normal with mean
 $\mu$ and standard deviation $\sigma/\sqrt{n}$. <span
 data-label="f_sampld"></span>](sampld1_bp){width="12cm"}
 
-The match between the curve and the histogram in Figure \@ref(f_sampld)
+The match between the curve and the histogram in Figure \@ref(f-sampld)
 is clearly very close. This is actually a nontrivial finding which
 illustrates a result which is of crucial importance for statistical
-inference. Recall that the normal curve shown in Figure \@ref(f_sampld)
+inference. Recall that the normal curve shown in Figure \@ref(f-sampld)
 is derived from the mathematical result stated above, which assumed that
 the population distribution of $Y$ is *exactly* normal. The histogram in
-Figure \@ref(f_sampld), on the other hand, is based on repeated samples
+Figure \@ref(f-sampld), on the other hand, is based on repeated samples
 from the actual population distribution of blood pressure, which, while
-quite close to a normal distribution as shown in Figure \@ref(f_bp2), is
+quite close to a normal distribution as shown in Figure \@ref(f-bp2), is
 certainly not exactly normal. Despite this, it is clear that the normal
 curve describes the histogram essentially exactly.
 
@@ -652,7 +652,7 @@ approximation becomes better and better as the sample size increases,
 while below about 30 the chance of incorrect conclusions from using it
 becomes large enough for us not to usually want to take that risk.
 
-We have seen in Figure \@ref(f_sampld2) that in the blood pressure
+We have seen in Figure \@ref(f-sampld2) that in the blood pressure
 example the sampling distribution given by the Central Limit Theorem is
 essentially exact for samples of size $n=50$. In this case this is
 hardly surprising, as the population distribution itself is already
@@ -661,11 +661,11 @@ limited to such easy cases but works quite generally. To demonstrate
 this with a more severe test, let us consider a population distribution
 that is as far as possible from normal. This is the binomial
 distribution of a binary variable that was introduced in Section
-\@ref(s_probs_distribution). If the probability parameter of this
+\@ref(s_probs-distribution). If the probability parameter of this
 distribution is $\pi$, its mean and variance are $\mu=\pi$ and
 $\sigma^{2}=\pi(1-\pi)$, and the sample mean $\bar{Y}$ of observations
 from the distribution is the sample proportion $\hat{\pi}$ (see equation
-\@ref(pihat_as_ybar) on page \pageref{pihat_as_ybar}). The CLT then tells
+\@ref(pihat_as_ybar) on page \pageref{pihat_as-ybar}). The CLT then tells
 us that
 
 -   When $n$ is large enough, the sampling distribution of the sample
@@ -673,8 +673,8 @@ us that
     proportion $\pi$ is approximately a normal distribution with mean
     $\pi$ and variance $\pi(1-\pi)/n$.
 
-This powerful result is illustrated in Figure \@ref(f_cltbin). It is
-similar to Figure \@ref(f_sampld) in that it shows sampling distributions
+This powerful result is illustrated in Figure \@ref(f-cltbin). It is
+similar to Figure \@ref(f-sampld) in that it shows sampling distributions
 obtained from a computer simulation, together with the normal curve
 suggested by the CLT. For each plot, 5000 samples of size $n$ were
 simulated from a population where $\pi$ was 0.2. The sample proportion
@@ -695,7 +695,7 @@ sizes $n$ are 10, 30, 100 and 1000.<span
 data-label="f_cltbin"></span>](sampld_p){width="140mm"}
 
 The variability of the sampling distribution will again depend on $n$.
-In Figure \@ref(f_cltbin), the observed range of values of $\hat{\pi}$
+In Figure \@ref(f-cltbin), the observed range of values of $\hat{\pi}$
 decreases substantially as $n$ increases. When $n=10$, values of between
 about 0 and 0.4 are quite common, whereas with $n=1000$, essentially all
 of the samples give $\hat{\pi}$ between about 0.16 and 0.24, and a large
@@ -705,12 +705,12 @@ decrease the uncertainty in inference about its true value.
 
 The Central Limit Theorem is, with some additional results, the
 justification for the standard normal sampling distribution used for
-tests and confidence intervals for proportions in Chapter \@ref(c_probs).
+tests and confidence intervals for proportions in Chapter \@ref(c-probs).
 The conditions for sample sizes mentioned there (pages
 \pageref{p_thumbp} and \pageref{p2pthumb}) again derive from conditions
 for the CLT to be adequate. The same is also ultimately true for the
 $\chi^{2}$ distribution and conditions for the $\chi^{2}$ test in
-Chapter \@ref(c_tables). Results like these, and many others, explain the
+Chapter \@ref(c-tables). Results like these, and many others, explain the
 central importance of the CLT in statistical methodology.
 
 [^1]: Carried out on behalf of The Department of Health by SCPR and the
